app/styles.scss/main.scss
.certificateLink {
  position: relative;
  background-size: cover;
  cursor: pointer;
  width: 20px;
  height: 25px;
  margin: 0 5px 0 5px;
  display: none !important;
  background-image: url("chrome-extension://__MSG_@@extension_id__/images/honcode/hon-none-large.png");
  &.valid {
    background-image: url('chrome-extension://__MSG_@@extension_id__/images/honcode/hon-valid-large.png');
    display: inline-block !important;
  }
  &.invalid {
    background-image: url('chrome-extension://__MSG_@@extension_id__/images/honcode/hon-invalid-large.png');
  }
}

.honPopup {
  all: initial;
  position: absolute;
  top: -10px;
  left: -10px;
  margin: 0;
  padding: 0;
  z-index: 9999;
  vertical-align: middle;
  width: 290px;

  background-color: white;
  box-shadow: 4px 4px 4px rgba(160, 160, 160, 0.7);
  border: 1px solid #e4e4e4 !important;

  font-family: Arial, sans-serif;
  font-size: 12px;
  cursor: pointer;
  -webkit-user-select: none;

  h4 {
    text-align: center;
    margin-bottom: 0;
    margin-top: 35px;
    text-transform: uppercase;
    font-weight: normal;
  }

  .k-infos {
    width: 150px;
    display: table-cell !important;
    vertical-align: top;
  }

  .principles {
    width: 150px;
    ul {
      padding: 10px 0;
      margin-left: 10px;
      list-style: none;

      li {
        &:before {
          content: "✓";
          color: limegreen;
          margin-right: 10px;
          font-size: 1.1em;
        }
      }
    }
    border-left: 1px solid #e4e4e4;
  }

  .trustability {
    width: 120px;
    padding: 0 10px;

    .honTrust {
      background-image: url('chrome-extension://__MSG_@@extension_id__/images/honcode/hon-valid-large.png');
      position: relative;
      background-size: cover;
      display: inline-block;
      height: 100px;
      width: 80px;
      margin-left: 25px;
      margin-top: 10px;
    }

    .circle {
      display: inline-block;
      vertical-align: top;
      margin-top: 5px;
      margin-left: 20px;
      padding-bottom: 10px;
      canvas {
        margin: 0 30%;
      }
    }
  }

  .honPopup-header {
    position: absolute;
    top: 0;
    width: 270px;
    background: url("chrome-extension://__MSG_@@extension_id__/images/icon-16.png") top left no-repeat;
    margin: 0;
    text-align: right;
    color: #A5A4A4;
    background-color: white;
    border-bottom: 1px solid #e4e4e4;
    font-size: 11px;
    padding: 5px;
    padding-right: 15px;
    background-position: 4px 4px;
    background-size: 7%;
  }
  p {
    white-space: normal;
    font-size: 0.8em;
    margin-left: 5px;
  }
}

